New loading on Account and Contact finished

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -383,7 +383,7 @@
                                         </button>
                                       
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3-->
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3-->
                               </div>
                               </div>
                         <!--HKA 18.11.2013 Add Contact modal -->
@@ -495,7 +495,7 @@
                                         </button>
                                       
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3-->
                               </div>
                               </div>
                           <!--HKA 19.11.2013 Need Modal -->
@@ -627,7 +627,7 @@
                                         </button>
                                       
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
                               </div>
                               </div>
 
@@ -752,7 +752,7 @@
                                         </button>
                                       
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3-->
                               </div>
                               </div>
 
@@ -900,7 +900,7 @@
                                         </button>
                                       
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3-->
                               </div>
                               </div>
                       </div>
@@ -927,7 +927,7 @@
                                              </div>
                                          <div class="pull-right">
                                          
-                                            <input ng-hide="isLoading" type="submit" class="btn green" value="Send">
+                                            <!--input ng-hide="isLoading" type="submit" class="btn green" value="Send"-->
 
                                           
                                           </div>
