--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -221,7 +221,7 @@
               </div>
               <div class="row">
           <div class="col-md-12">
-            <div class="pagination pull-right" ng-hide="isLoading">
+            <div class="pagination pull-right" >
                   
                   
                     <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="contactpagination.prev">
