avoid showing an empty page

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -76,7 +76,7 @@
               </span>
         </div>
  </div>
-    <div class="" >
+    <div ng-show="isContentLoaded" >
       <!--HKA 19.11.2013 Begin  row-2 who is involved -->
     <div class="row">
 
