showing rounded avatar photo for user

--- a/templates/base.html
+++ b/templates/base.html
@@ -157,7 +157,7 @@
               <!-- BEGIN USER LOGIN DROPDOWN -->
               <li class="dropdown user">
                 <a href="{{user.google_public_profile_url}}" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                  <img alt="" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg?sz=29"/>
+                  <img alt="" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg?sz=29" class="user-photo" />
                   <span class="username">
                     {{user.google_display_name}}
                   </span>
