yellow loading on Lead

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -1,4 +1,12 @@
 <div  class="page-content">
+<div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
     
    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <div id="portlet-config" class="modal">
@@ -116,8 +124,8 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input ng-hide="isLoading" ng-click="save(lead)" type="submit" class="btn green" value="Add this lead">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                <input  ng-click="save(lead)" type="submit" class="btn green" value="Add this lead">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
                </div>
@@ -249,7 +257,7 @@
               </div>
               <div class="row">
               <div class="col-md-12">
-            <div class="pagination pull-right" ng-hide="isLoading">
+            <div class="pagination pull-right" >
                   
              
                     <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="leadpagination.prev">
@@ -261,7 +269,7 @@
                     </button>
                   
                 </div>
-                <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
           </div>
        </div> 
               </div>
@@ -314,8 +322,8 @@
 
                   </div>
                   <div class="col-md-6">
-                    <input type="submit" ng-hide="isLoading" ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
-                    <input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}">
+                    <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                    <!--input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}"-->
                   </div>
                   </div>
                 </form>
