--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -212,7 +212,7 @@
                                    </div>      
                                          <div class="pull-right">
                                        
-                                          <input  type="submit" class="btn green" value="Add this note">
+                                          <input ng-disabled="isLoading"  type="submit" class="btn green" value="Add this note">
                                           <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                           </div>
                                         </form>
@@ -444,7 +444,7 @@
                            
                            <div class="pull-right">
                            
-                              <input  type="submit" class="btn green" value="Send">
+                              <input ng-disabled="isLoading"  type="submit" class="btn green" value="Send">
 
                             
                             </div>
