--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -285,7 +285,7 @@
                                          
                                          <div class="pull-right">
                                          <!-- <input type="submit" class="btn btn-primary" value="Attach file">-->
-                                          <input  type="submit" class="btn green" value="Add this note">
+                                          <input ng-disabled="isLoading"  type="submit" class="btn green" value="Add this note">
                                           <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                           </div>
                                         </form>
@@ -514,7 +514,7 @@
                            
                            <div class="pull-right">
                            
-                              <input  type="submit" class="btn green" value="Send">
+                              <input ng-disabled="isLoading"  type="submit" class="btn green" value="Send">
 
                             
                             </div>
