--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -31,8 +31,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input  type="submit" class="btn green" value="Create this document">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                         
             </form>
             </div>
@@ -56,6 +56,14 @@
 </div>
     
 <div  class="page-content">
+<div class="loader-container row" ng-show="isLoading">
+      <div class="loader-dialog col-md-4 col-md-offset-4 ">
+        <div class="loader-content">
+          Loading...
+        </div>
+      </div>
+      
+    </div>
 
       <div class="container-fluid" ng-show="immediateFailed">
          <div class="col-md-12">  
@@ -153,8 +161,8 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input ng-hide="isLoading" ng-click="deletecase()" type="submit" class="btn red" value="Delete this Case">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                <input  ng-click="deletecase()" type="submit" class="btn red" value="Delete this Case">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
           </div>
@@ -228,8 +236,8 @@
                                           <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>                
                                         </div>                         
                                          <div class="pull-right">
-                                            <input ng-hide="isLoading" type="submit" class="btn green" value="{{ _('Add this note') }}">
-                                            <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled>
+                                            <input  ng-disabled="isLoading"  type="submit" class="btn green" value="{{ _('Add this note') }}">
+                                            <!--input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled-->
                                          </div>
                                     </form>
                                 </div>
@@ -250,7 +258,7 @@
                             </ul>
                             <div class="row">
                             <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
+                                <div class="pagination pull-right" >
                                       
                                       
                                       <button ng-click="TopiclistPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="topicpagination.prev">
@@ -261,7 +269,7 @@
                                         {{_("Next")}} 
                                        </button>
                                 </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
                               </div>
                               </div>
                             </div>
@@ -559,8 +567,8 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
               
-                  <input ng-hide="isLoading" ng-click="addCustomField(customField)" ng-disabled="!(customField.field && customField.value)" type="submit" class="btn green" value="{{_('Add this custom field')}}">
-                  <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
+                  <input   ng-click="addCustomField(customField)" ng-disabled="!(customField.field && customField.value)" type="submit" class="btn green" value="{{_('Add this custom field')}}">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled-->
               </div>
                 </form>
                 </div>
@@ -656,7 +664,7 @@
                                              </div>
                                          <div class="pull-right">
                                          
-                                            <input ng-hide="isLoading" type="submit" class="btn green" value="Send">
+                                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Send">
 
                                           
                                           </div>
@@ -747,8 +755,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Add this task">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input  type="submit" class="btn green" value="Add this task">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                         
             </form>
             </div>
@@ -773,8 +781,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input  ng-disabled="isLoading" type="submit" class="btn green" value="Create this document">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                         
             </form>
             </div>
@@ -813,8 +821,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="{{_('Add this event')}}">
-                <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
+               <input  type="submit" class="btn green" value="{{_('Add this event')}}">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled-->
                                         
             </form>
             </div>
