--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -239,7 +239,7 @@
                                            
                                          
                                          <div class="pull-right">
-                                            <input  type="submit" class="btn green" value="Add this note">
+                                            <input ng-disabled="isLoading"  type="submit" class="btn green" value="Add this note">
                                             <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                                           </div>
                           </form>
@@ -676,7 +676,7 @@
                                              </div>
                                          <div class="pull-right">
                                          
-                                            <input  type="submit" class="btn green" value="Send">
+                                            <input ng-disabled="isLoading"  type="submit" class="btn green" value="Send">
 
                                           
                                           </div>
