--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -197,13 +197,19 @@
             <div class="col-md-9">
             <div class="inner-cards-container">
             
-              <div ng-repeat="lead in leads" class="col-lg-4 col-md-3 col-sm-6 col-xs-12" >
-                <div class="dashboard-stat cards-small" droppable ng-drop="dropTag(lead)">
+              <div  droppable ng-repeat="lead in leads" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(lead)" >
+                <div class="cardHeader">
+                          <a href="/#/leads/show/<%= lead.id %>">
+                              <h2 class="cardTitle">
+                                <%= lead.firstname %> <%= lead.lastname %>
+                              </h2>
+                          </a>  
+                    </div>
+                    <hr>
+
                   
-                  <div class="details">
-                    <a href="/#/leads/show/<%= lead.id %>"><h2 class="cardTitle">
-                      <%= lead.firstname %> <%= lead.lastname %>
-                    </h2></a>
+                  <div class="cardDetails">
+                  
                   <div class="desc">
                     <div class="row margin-bottom-5">
                       <div class="col-md-12">
@@ -215,7 +221,7 @@
                      </div>
                      </div>
                    
-                    <div class="row">
+                    <div class="row cardTags">
                           <div class="col-md-12">
                                <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
                                </a>
@@ -225,8 +231,15 @@
                   </div>
                   </div>
                                   
-                </div>
+              
               </div>
+              <script type="text/javascript">
+                  $('.inner-cards-container').waterfall({ 
+                      colMinWidth: 200, 
+                      defaultContainerWidth: 800,
+                      autoresize: true
+                    });
+               </script>
                <div ng-show="blankStatelead" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
@@ -293,6 +306,9 @@
                     <!--div class="tag-color" style="border-left: 4px solid <%=tag_item.color%>;">
                     </div-->
                     <span draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"><%= tag_item.name %></span>
+                    <span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
+                      <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>  
+                    </span>
                     <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                       <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
                     </form>
