adding data-span 3 for blanck state and no result found on all objects

--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -200,7 +200,7 @@
                       autoresize: true
                     });
                </script>
-               <div ng-show="blankStatecontact" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStatecontact" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
@@ -213,7 +213,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="isFiltering * !contacts" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="isFiltering * !contacts" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
