--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -240,7 +240,7 @@
                       autoresize: true
                     });
                </script>
-               <div ng-show="blankStatelead" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStatelead" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
@@ -253,7 +253,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="isFiltering * !leads" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="isFiltering * !leads" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
