--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -339,7 +339,7 @@
                       autoresize: true
                     });
                </script>
-               <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStateopportunity" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
@@ -350,7 +350,7 @@
                   </div>
                 </div>
                 </div>
-                <div ng-show="isFiltering * !opportunities" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                <div ng-show="isFiltering * !opportunities" data-span="3" class="col-md-12  responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
