--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -208,7 +208,7 @@
                       autoresize: true
                     });
                </script>
-              <div ng-show="blankStateaccount" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="blankStateaccount" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
