--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -279,7 +279,7 @@
                </script>                 
                
               
-               <div ng-show="blankStatecase" class="col-md-12 responsive" data-tablet="col-md-6" data-desktop="col-md-12">
+               <div ng-show="blankStatecase" data-span="3" class="col-md-12 responsive" data-tablet="col-md-6" data-desktop="col-md-12">
                 <div class="dashboard-stat cards">
                   
                   
@@ -292,7 +292,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="isFiltering * !cases" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="isFiltering * !cases"  data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
