--- a/templates/base.html
+++ b/templates/base.html
@@ -110,9 +110,9 @@
                        {%for application in apps %}
                         <li class="gb_a">
                           <a href="/apps/{{ application.id }}">
-                          <i class="fa fa-user"></i>
                           <span class="task">
                             <span class="desc">
+                               <img class="platform_icons" height="50" width="50" src="static/img/admin_console.png">
                               {{application.label}}
                             </span>
                           </span>               
@@ -121,9 +121,9 @@
                        {%endfor%} 
                          <li class="gb_a">
                           <a href="https://drive.google.com/?tab=mo&authuser=0" target="new">
-                         
                           <span class="task">
                             <span class="desc">
+                              <img class="platform_icons" src="static/img/google_drive.png">
                              Drive
                             </span>
                           </span>               
@@ -131,9 +131,9 @@
                         </li>
                         <li class="gb_a">
                           <a href="https://www.google.com/calendar?tab=oc" target="new">
-                
                           <span class="task">
                             <span class="desc">
+                            <img class="platform_icons" src="static/img/google_calendar.png">
                            Calendar
                             </span>
                           </span>               
@@ -141,9 +141,9 @@
                         </li>
                         <li class="gb_a">
                           <a href="https://mail.google.com/mail/?tab=om" target="new">
-                          <i class="fa"></i>
                           <span class="task">
                             <span class="desc">
+                            <img class="platform_icons" src="static/img/google_gmail.png">
                            Gmail
                             </span>
                           </span>               
@@ -443,7 +443,9 @@
 
   <!-- END CORE PLUGINS -->
   
-
+<script type="text/javascript">
+   
+</script>
  
   <!-- END JAVASCRIPTS -->
 </body>
