--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -78,9 +78,13 @@
                           <label><strong>Organization name:</strong></label>
                           <input required autofocus type="text" name="org_name" >
                           
-                          <button type="submit" class="btn blue pull-right next-step">Next step</button>
+                          <button id="next_step" type="submit" class="btn blue pull-right next-step">Next step</button>
 
                         </form>
+                        <div id="loading" style="display:none;" >
+                          <center><img src="/static/img/google_loading.gif"  style="height:30px; width:30px; margin-top:50px; margin-left:75px;">
+                          </center>
+                      </div>
                      </div>
                   </div>
                 </div>
@@ -108,6 +112,11 @@
   <!-- BEGIN CORE PLUGINS -->   
   <script src="static/plugins/jquery-1.10.1.min.js"  type="text/javascript"></script>
   <script src="static/plugins/jquery-migrate-1.2.1.min.js"  type="text/javascript"></script>
+  <script type="text/javascript">
+    $('#next_step').click(function() {
+       $('#loading').show();
+    });
+  </script>
 
   <!-- END CORE PLUGINS -->
   
